# txt

./: mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: 10.md  2.md  7.md  8.md  9.md  comment.md  index.md  回收站委员会.md  学园百科.md
docs/assets/javascripts/: extra.js
docs/assets/stylesheets/: extra.css
docs/parawiki/: comming-soon.md
docs/txt/: 10.md  11.md  2.md  7.md  8.md  9.md
