[tool.poetry]
name = "txt"
version = "0.1.0"
description = ""
authors = ["Mafuka <i@mafuka.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.5.4"
mkdocs-minify-plugin = "^0.7.2"
mkdocs-rss-plugin = "^1.12.0"
jieba = "^0.42.1"
mkdocs-glightbox = "^0.3.6"
mkdocs-redirects = "^1.2.1"
mkdocs-git-revision-date-localized-plugin = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
